[project]
name = "apis"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno",email = "brunommbpro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.125.0,<0.126.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
